2007-10-25 Andreas Schmitz <schmitz@lat-lon.de>
	pom.xml:
	Added main class entry to manifest.

2007-10-24 Paul Austin <paul.austin@revolsys.com
          * Changed the AddWmsLayerPlugin to use the new WMS wizard and improved
            the invalid URL handling so next is not available until a potential
            valid URL is entered.
          * Minor enhancements to the Open framework

2007-10-24 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java,
      src/com/vividsolutions/jump/workbench/ui/style/BasicStylePanel.java:
      Fixed item 1 of issue
      http://sourceforge.net/tracker/index.php?func=detail&aid=1691836&group_id=118054&atid=679906

2007-10-24 Andreas Schmitz <schmitz@lat-lon.de>
	  src/com/vividsolutions/jump/workbench/imagery/geotiff/GeoTIFFRaster.java:
	  Fixed reading of TIFF rasters with world files.

2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
      src/language/jump_it.properties,
      src/language/jump_fi.properties,
      src/language/jump.properties,
      src/language/jump_zh_CN.properties,
      src/language/jump_en.properties,
      src/language/jump_pt.properties,
      src/language/jump_pt_BR.properties,
      src/language/jump_es.properties,
      src/language/jump_fr.properties,
      src/language/jump_de.properties,
      src/com/vividsolutions/wms/WMService.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/AddWMSQueryPlugIn.java:
	  Fixed issue
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1748657&group_id=118054&atid=679906

2007-10-19 Paul Austin <paul.austin@revolsys.com
          * Removed Open, close buttons from the open project panel
          * Added double click handling to the new open wizards

2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
    src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,